Adjust sizing and spacing in master.css.scss; corrected a col from xs to sm as per instructions

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -34,10 +34,11 @@
 }
 .links a {
   color:black;
-  font-size: 25px;
+  font-size: 24px;
   border-bottom: 1px solid #dfdfdf;
   font-family: 'Lato', sans-serif;
   font-weight: bold;
+  white-space: nowrap;
 }
 header {
   border-top: 9px solid #222222;
@@ -47,20 +48,22 @@ hr {
 }
 h1 {
   font-family: 'Roboto', sans-serif;
+  font-weight: bold;
   font-size: 48px;
 }
-h2 {
-  font-family: 'Roboto', sans-serif;
+h2 span {
   color: #dddddd;
+  font-family: 'Roboto', sans-serif;
 }
 .next-quote {
   color:#40f74c;
   font-family: 'Lato', sans-serif;
-  font-size: 20px;
+  font-size: 18px; //Dropped down from 20px to get both Irish and English on the same line.
 }
 .footer-blurb {
   font-family: "Palatino Linotype", Palatino, Palladio, "URW Palladio L", "Book Antiqua", Baskerville, "Bookman Old Style", "Bitstream Charter", "Nimbus Roman No9 L", Garamond, "Apple Garamond", "ITC Garamond Narrow", "New Century Schoolbook", "Century Schoolbook", "Century Schoolbook L", Georgia, serif;
   font-style: italic;
+  text-align: right;
   font-size: 10px;
 }
 .logo:hover {
